--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Content lift</title>
+    <style>
+        body,html,main {
+            position: relative;
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: #000;
+            padding: 0;
+            margin: 0;
+        }
+        main article {
+            position: absolute;
+            display: block;
+            height: 100%;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
     <nav>
