add scroll overflow

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             display: block;
             height: 100%;
             width: 100%;
+            padding-top: 1em;
+            overflow: scroll;
+            transition: top 1s;
+            top: -100vh;
         }
     </style>
 </head>
