add navigation and content css

--- a/index.html
+++ b/index.html
@@ -25,6 +25,33 @@
             transition: top 1s;
             top: -100vh;
         }
+        main article:target {
+            top: 0;
+        }
+        main article[data-previous] {
+            animation: close 1s forwards;
+        }
+        nav {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            z-index: 9999;
+            background: #000;
+        }
+        #p1 {
+            background: green;
+        }
+        #p2 {
+            background: blue;
+        }
+        #p1 {
+            background: red;
+        }
+        @keyframes close {
+            0% {top: 0}
+            99% {top: 100vh}
+            100% {top: -100vh;}
+        }
     </style>
 </head>
 <body>
